--- a/furniture/furni/templates/furni/product_list.html
+++ b/furniture/furni/templates/furni/product_list.html
@@ -3,7 +3,7 @@
 <div class="col-md-4 col-lg-3">
   <div class="card border-0 shadow-sm h-100">
     <div class="position-relative">
-      <a href="{% url 'product' cat_id=product.category.id prod_id=product.id %}">
+      <a href="{% url 'product' cat_id=product.category.slug prod_id=product.slug %}">
         <img src="{{product.img.url}}" class="card-img-top" alt="Product">
       </a>
     </div>
