--- a/furniture/furni/templates/furni/profile.html
+++ b/furniture/furni/templates/furni/profile.html
@@ -66,15 +66,18 @@
     <!-- Mobile Layout (list style like Amazon app) -->
     <div class="list-group d-md-none">
         <h5 class="mt-3">Orders</h5>
-        <a href="furni/orders.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+        <a href="{% url 'orders' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             Your Orders <span>&gt;</span>
         </a>
-        <a href="" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+        <a href="{% url 'address' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             Your Addresses <span>&gt;</span>
+        </a>
+        <a href="{% url 'contactus' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+            Contact Us <span>&gt;</span>
         </a>
 
         <h5 class="mt-4">Account Settings</h5>
-        <a href="" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+        <a href="{% url 'edit_account' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             Login &amp; Security <span>&gt;</span>
         </a>
         <a href="" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
