--- a/furniture/furni/templates/furni/checkout.html
+++ b/furniture/furni/templates/furni/checkout.html
@@ -515,7 +515,7 @@
 document.addEventListener('DOMContentLoaded', function (){
 	const page = "{{page}}";
 	const product = "{{product.id}}";
-	const quantity = "{{quantity}}";
+	const qty = "{{quantity}}";
 	const total_product_cost = "{{total_product_cost}}"
 	const form =  document.getElementById("checkout-form");
 	if (page == "cart_checkout") {
